feat(ci):csrf插件ci测试

--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -84,6 +84,9 @@ jobs:
       - name: Test gRPC MUSTPASS-PLUGIN-Shiro
         run: go test -timeout 1m -run TestGRPCMUSTPASS_Shiro ./common/coreplugin -v
 
+      - name: Test gRPC MUSTPASS-PLUGIN-CSRF
+        run: go test -timeout 1m -run TestGRPCMUSTPASS_CSRF ./common/coreplugin -v
+
       - name: Test CVEQuery
         run: go test -timeout 1m -run TestQueryCVEWithFixName ./common/cve -v
 
